# Darbas_X

./: README.md  alembic.ini  darbas  darbas.eng  main.py  pyproject.toml
instance/: database.db
website/: __init__.py  admin.py  auth.py  models.py  views.py
website/static/: design.css
website/templates/: AddSale.html  CompoCreate.html  CompoDelete.html  CompoUpdate.html  DeleteAccountAdmin.html  DeleteFromCart.html  EditUserAdmin.html  FinalizingOrder.html  Revenue.html  Statistics.html  ViewComments.html  ViewMyComments.html  addComment.html  addStock.html  add_component.html  add_funds.html  admin.html  balance.html  base.html  cartPage.html  catalog.html  components.html  current_user.html  delete.html  home.html  login.html  order.html  payment_form.html  payment_method.html  payment_method_nonce.html  process_payment.html  recipt.html  sign_up.html  success.html  update.html  userOrders.html  viewCommentsAdmin.html  view_components.html
