[tool.poetry]
name = "darbas-x"
version = "0.1.0"
description = ""
authors = ["Robertas1993 <entrepreneur0508@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask-session = "^0.8.0"
flask-login = "^0.6.3"
sqlalchemy = "^2.0.36"
flask-sqlalchemy = "^3.1.1"
website = "^1.1"
alembic = "^1.14.0"
flask = "^3.1.0"
flask-migrate = "^4.0.7"
flask-script = "^2.0.6"
flask-mail = "^0.10.0"
jwt = "^1.3.1"
braintree = "^4.31.0"
flask-alembic = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
